test/classes/subclasses/superAccessibility1.good
superAccessibility1.chpl:14: error: Cannot access 'super', 'super' is private to 'Child'
